[package]
name = "ra-report-validator"
version = "0.0.1"
authors = ["Jun Jiang <jun.jiang@hashforests.com>"]

[dependencies]
chrono      = "0.4.5"
webpki      = "0.21.0"
rustls      = { version = "0.16.0", features = ["dangerous_configuration"] }
itertools   = "*"
sgx_types   = "1.0.9"
base64      = "0.9.2"
serde_json  = "1.0.24"
hex         = "*"
